@@ -9,6 +9,7 @@ import org.jooq.Field;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class ExpressionMapper implements Function<ExpressionItem, Condition> {
 
@@ -21,24 +22,35 @@ public class ExpressionMapper implements Function<ExpressionItem, Condition> {
         this.termHandlerFactory = termHandlerFactory;
     }
 
-    public <T> void map(final AbstractField dataSourceField,
-                        final Field<T> field, final Converter<T> converter) {
-        expressionMapper.addHandler(dataSourceField, termHandlerFactory.create(
-                dataSourceField,
-                field,
-                new ConverterAdapter<>(converter)));
-    }
-
+    /**
+     * Uses UUID for any {@link stroom.datasource.api.v2.DocRefField}s
+     */
     public <T> void map(final AbstractField dataSourceField,
                         final Field<T> field,
-                        final Converter<T> converter, final boolean useName) {
+                        final Converter<T> converter) {
         expressionMapper.addHandler(dataSourceField, termHandlerFactory.create(
                 dataSourceField,
                 field,
-                new ConverterAdapter<>(converter),
+                MultiConverter.wrapConverter(converter)));
+    }
+
+    /**
+     * Uses UUID or name for any {@link stroom.datasource.api.v2.DocRefField}s depending on useName
+     */
+    public <T> void map(final AbstractField dataSourceField,
+                        final Field<T> field,
+                        final Converter<T> converter,
+                        final boolean useName) {
+        expressionMapper.addHandler(dataSourceField, termHandlerFactory.create(
+                dataSourceField,
+                field,
+                MultiConverter.wrapConverter(converter),
                 useName));
     }
 
+    /**
+     * Uses UUID for any {@link stroom.datasource.api.v2.DocRefField}s
+     */
     public <T> void multiMap(final AbstractField dataSourceField,
                              final Field<T> field,
                              final MultiConverter<T> converter) {
@@ -48,6 +60,9 @@ public class ExpressionMapper implements Function<ExpressionItem, Condition> {
                 converter));
     }
 
+    /**
+     * Uses UUID or name for any {@link stroom.datasource.api.v2.DocRefField}s depending on useName
+     */
     public <T> void multiMap(final AbstractField dataSourceField,
                              final Field<T> field,
                              final MultiConverter<T> converter,
@@ -68,31 +83,58 @@ public class ExpressionMapper implements Function<ExpressionItem, Condition> {
         return expressionMapper.apply(expressionItem);
     }
 
+
+    // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
     public interface Converter<T> {
 
         T apply(String value);
     }
 
+
+    // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
     public interface MultiConverter<T> {
 
-        List<T> apply(String value);
-    }
+        /**
+         * Converts each input value into 0-many output values, combining all the output lists
+         * into a single list.
+         */
+        List<T> apply(final List<String> values);
 
-    private static class ConverterAdapter<T> implements MultiConverter<T> {
-
-        private final Converter<T> converter;
-
-        ConverterAdapter(final Converter<T> converter) {
-            this.converter = converter;
+        /**
+         * Wraps a one to many function inside a {@link MultiConverter}. converter will be called once for each
+         * value passed to {@link MultiConverter} so don't use this if converter is backed by SQL calls, instead
+         * implement {@link MultiConverter} yourself.
+         */
+        static <T> MultiConverter<T> wrapSingleInputConverter(final Function<String, List<T>> converter) {
+            return values -> {
+                if (values == null) {
+                    return Collections.emptyList();
+                } else {
+                    // Call the converter for each
+                    return values.stream()
+                            .flatMap(val -> converter.apply(val).stream())
+                            .collect(Collectors.toList());
+                }
+            };
         }
 
-        @Override
-        public List<T> apply(final String value) {
-            final T t = converter.apply(value);
-            if (t != null) {
-                return List.of(t);
-            }
-            return Collections.emptyList();
+        /**
+         * Wraps a one to one {@link Converter} function inside a {@link MultiConverter}.
+         */
+        static <T> MultiConverter<T> wrapConverter(final Converter<T> converter) {
+            return values -> {
+                if (values == null) {
+                    return Collections.emptyList();
+                } else {
+                    return values.stream()
+                            .map(converter::apply)
+                            .collect(Collectors.toList());
+                }
+            };
         }
     }
 }
